<resources>
    <string name="app_name">firstITE</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_to_our_app">WELCOME TO OUR APP</string>
    <string name="sign_up_or_log_in_to_nenjoy_your_time">Sign up or log in to \nenjoy your time.</string>
    <string name="enter_address">Enter Address</string>
    <string name="password">Password</string>
    <string name="sign_in">SIGN IN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="or_log_in_with">---------------------------------- OR Log in with ----------------------------------</string>
    <string name="log_in_with_google">Log in with Google</string>
    <string name="cambodia">cambodia</string>
    <string name="e_library_ltd">E-Library Ltd.</string>
    <string name="tos_ran">Tos Ran</string>
    <string name="enter_address_signUp">Enter Password</string>
    <string name="email_address_signUp">Email Address*</string>
    <string name="enter_address_input_SignUp">Enter Address</string>
    <string name="email_password_signUp">Email Password*</string>
    <string name="comfirm_password_input_signUp">Comfirm Password</string>
    <string name="text_signUp">By Sign up, I agree to the Terms Of Use and privancy\nPolicy of Our App.</string>
    <string name="long_txt_SignUp">E-Library collects and processes your email address\n for maketing purpose. You can easily read the books\n and can buy the book as well whatever you want to buy or read it. THANK YOU!</string>
    <string name="already_have_account">already have account?</string>
    <string name="e_library">E-Library</string>
    <string name="genderbook">GenderBook</string>
    <string name="see_all">See All</string>
    <string name="hello">Hello</string>
    <string name="comicbook">ComicBook</string>
    <string name="author_s_list">Author\'s List</string>
    <string name="logout">Logout</string>
    <string name="name">name</string>
    <string name="short_description">Short description</string>
    <string name="show_more">Show more</string>
    <string name="author_s_book">Author\'s Book</string>
    <string name="title">Title</string>
    <string name="price">price</string>
    <string name="publisher">publisher</string>
    <string name="category_name">Category Name</string>
    <string name="author_name">Author Name</string>
    <string name="decs">Decs</string>
    <string name="show_more1">Show more</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="username">username</string>
    <string name="username_banner">UserName</string>
    <string name="email_address_banner">Email Address*</string>
    <string name="email_address">Email Address</string>
    <string name="password_8_characters_banner">Password 8 characters</string>
    <string name="gender_banner">Gender*</string>
    <string name="gender">Gender</string>
    <string name="cancel">Cancel</string>
    <string name="card_number">Card Number</string>
    <string name="card_holder_number">Card_holder_number</string>
    <string name="expiration_card">Expiration Card</string>
    <string name="cvv">Cvv</string>
    <string name="done">Done</string>
    <string name="total_0">Total = 0</string>
    <string name="pay_now">Pay Now</string>
    <string name="generalbook">General Book</string>
    <string name="comic_book">Comic Book</string>
    <string name="welcome">Welcome</string>
    <string name="logout_text">Logout</string>
    <string name="books">Books</string>
    <string name="searching">Searching</string>
    <string name="search">Search...</string>
    <string name="hello_author_book">Hello</string>
    <string name="hello_text">Hello</string>
    <string name="title_text">Title</string>
    <string name="title_cart">Title</string>
    <string name="price_cart">Price</string>
    <string name="dash">-</string>
    <string name="_0">0</string>
    <string name="Plus_cart">+</string>
</resources>