<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".signUp_Screen.MainActivitySignUp">

        <RelativeLayout
            android:id="@+id/SignUpUsernameRelativeLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_30dp">

            <TextView
                android:id="@+id/txtViewUsernameAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_13dp"
                android:text="@string/username_banner"
                android:textSize="@dimen/_17sp"
                android:textColor="@color/_31bd5b"/>

            <EditText
                android:id="@+id/editTextUsernameSignUp"
                android:layout_marginTop="@dimen/_30dp"
                android:layout_width="@dimen/_390dp"
                android:layout_height="@dimen/_60dp"
                android:autofillHints=""
                android:hint="@string/username"
                android:inputType="textEmailAddress"
                android:layout_marginStart="@dimen/_10dp"
                android:textColor="@android:color/black"
                android:backgroundTint="@color/edit_text_color_state_list"/>

        </RelativeLayout>


        <RelativeLayout
            android:layout_below="@+id/SignUpUsernameRelativeLayout"
            android:id="@+id/SignUpEmailRelativeLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_30dp">

            <TextView
                android:id="@+id/txtViewEmailAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_13dp"
                android:text="@string/email_address_banner"
                android:textSize="@dimen/_17sp"
                android:textColor="@color/_31bd5b"/>

            <EditText
                android:id="@+id/editTextEmailSignUp"
                android:layout_marginTop="@dimen/_30dp"
                android:layout_width="@dimen/_390dp"
                android:layout_height="@dimen/_60dp"
                android:autofillHints=""
                android:hint="@string/email_address"
                android:inputType="textEmailAddress"
                android:layout_marginStart="@dimen/_10dp"
                android:textColor="@android:color/black"
                android:backgroundTint="@color/edit_text_color_state_list"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/SignUpEmailRelativeLayout2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/SignUpEmailRelativeLayout"
            android:layout_marginTop="@dimen/_30dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_13dp"
                android:text="@string/password_8_characters_banner"
                android:textSize="@dimen/_17sp"
                android:textColor="@color/_31bd5b"/>

            <EditText
                android:id="@+id/editTextPasswordSignUp"
                android:layout_marginTop="@dimen/_30dp"
                android:layout_width="@dimen/_390dp"
                android:layout_height="@dimen/_60dp"
                android:autofillHints=""
                android:hint="@string/enter_address_signUp"
                android:inputType="textPassword"
                android:layout_marginStart="@dimen/_10dp"
                android:textColor="@android:color/black"
                android:backgroundTint="@color/edit_text_color_state_list"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/SignUpEmailRelativeLayout4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/SignUpEmailRelativeLayout2"
            android:layout_marginTop="@dimen/_30dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_13dp"
                android:text="@string/gender_banner"
                android:textSize="@dimen/_17sp"
                android:textColor="@color/_31bd5b"/>

            <EditText
                android:id="@+id/editTextGender"
                android:layout_marginTop="@dimen/_30dp"
                android:layout_width="@dimen/_390dp"
                android:layout_height="@dimen/_60dp"
                android:autofillHints=" "
                android:hint="@string/gender"
                android:inputType="textPersonName"
                android:layout_marginStart="@dimen/_10dp"
                android:textColor="@android:color/black"
                android:backgroundTint="@color/edit_text_color_state_list"/>
        </RelativeLayout>

        <TextView
            android:id="@+id/txtViewDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/SignUpEmailRelativeLayout4"
            android:layout_marginTop="@dimen/_40dp"
            android:layout_marginStart="@dimen/_30dp"
            android:textSize="@dimen/_16sp"
            android:textColor="@color/_0b870f"
            android:text="@string/text_signUp"/>

        <TextView
            android:id="@+id/txtFullDescription1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtViewDescription"
            android:layout_marginStart="@dimen/_30dp"
            android:layout_marginTop="@dimen/_40dp"
            android:textSize="@dimen/_16sp"
            android:textColor="@color/_0b870f"
            android:text="@string/long_txt_SignUp"/>

        <Button
            android:id="@+id/SignUpButton123"
            android:layout_width="@dimen/_400dp"
            android:layout_height="@dimen/_60dp"
            android:layout_below="@+id/txtFullDescription1"
            android:layout_marginTop="@dimen/_40dp"
            android:textSize="@dimen/_20sp"
            android:layout_centerHorizontal="true"
            android:text="@string/sign_up"/>

        <LinearLayout
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_10dp"
            android:layout_width="@dimen/_300dp"
            android:layout_height="@dimen/_50dp"
            android:layout_below="@+id/SignUpButton123"
            android:orientation="horizontal">

            <TextView
                android:textSize="@dimen/_17sp"
                android:layout_marginStart="@dimen/_10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/already_have_account"
                android:textColor="@color/black"/>

            <Button
                android:id="@+id/btnSignInBack"
                android:layout_width="@dimen/_100dp"
                android:layout_height="@dimen/_60dp"
                android:text="@string/sign_in"
                android:backgroundTint="@color/white"
                android:textColor="@color/_050aa6"/>
        </LinearLayout>
    </RelativeLayout>
</ScrollView>
