<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/backHomefragment"
            android:layout_width="@dimen/_40dp"
            android:layout_height="@dimen/_40dp"
            android:src="@drawable/baseline_keyboard_arrow_down_24"/>

        <LinearLayout
            android:background="@color/dedede_white"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".Home_screen.BookDetailActivity"
            android:orientation="vertical"
            android:gravity="center_horizontal">
            <TextView
                android:id="@+id/txtTitleDetail"
                android:layout_marginTop="@dimen/_30dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:textSize="@dimen/_30sp"
                android:textColor="@color/black"/>

            <ImageView
                android:layout_marginTop="@dimen/_10dp"
                android:id="@+id/BookImageView"
                android:layout_width="@dimen/_250dp"
                android:layout_height="@dimen/_300dp"
                android:src="@drawable/elibra"
                android:scaleType="centerCrop" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_608dp"
                android:layout_marginTop="@dimen/_20dp"
                android:background="@drawable/rounded_top_author"
                android:orientation="vertical"
                android:padding="@dimen/_20dp">

                <TextView
                    android:id="@+id/txtPriceCategoryGeneral"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/price"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_18sp" />

                <TextView
                    android:id="@+id/txtpublisherCategoryGeneral"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/publisher"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_18sp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"/>

                <TextView
                    android:id="@+id/BookCategoryName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/category_name"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_18sp" />

                <TextView
                    android:id="@+id/BookAuthorName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/author_name"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_18sp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"/>

                <TextView
                    android:id="@+id/BookAuthorDecs"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/decs"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_18sp"
                    android:layout_marginBottom="10dp"/>

                <TextView
                    android:id="@+id/showMoreTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/show_more1"
                    android:textColor="@color/_2561ba_blue"
                    android:textSize="@dimen/_20sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10dp">

                    <!-- Button for "Add to Cart" -->
                    <Button
                        android:id="@+id/btnAddToCart"
                        android:layout_width="@dimen/_0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/add_to_cart"
                        android:visibility="gone" />

                    <!-- Button for "Add to Favorite" -->
                    <Button
                        android:id="@+id/btnAddToFavorites"
                        android:layout_width="@dimen/_0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Read Book"
                        android:visibility="gone" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>


    </LinearLayout>



</ScrollView>