<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".signIn_Screen.MainActivity">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10dp"
            android:id="@+id/containRelativelayout">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_30dp"
                android:id="@+id/firstRelativeLayout"
                android:layout_marginLeft="@dimen/_20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/welcome_to_our_app"
                    android:textStyle="bold"
                    android:textSize="16dp"
                    android:id="@+id/txtWelcome"
                    android:textColor="@color/green_dark"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20dp"
                    android:id="@+id/txtTime"
                    android:text="@string/sign_up_or_log_in_to_nenjoy_your_time"
                    android:textColor="@color/black"/>
            </RelativeLayout>

            <ImageView
                android:layout_width="@dimen/_80dp"
                android:layout_height="@dimen/_80dp"
                android:src="@mipmap/mky"
                android:layout_toRightOf="@+id/firstRelativeLayout"
                android:layout_marginLeft="@dimen/_100dp"
                android:layout_marginTop="@dimen/_23dp"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/emailRelativeLayout"
            android:layout_marginTop="@dimen/_50dp"
            android:layout_below="@+id/containRelativelayout">

            <EditText
                android:id="@+id/editTextEmail"
                android:layout_width="@dimen/_390dp"
                android:layout_height="@dimen/_60dp"
                android:hint="username"
                android:paddingLeft="@dimen/_30dp"
                android:inputType="textEmailAddress"
                android:layout_marginLeft="@dimen/_10dp" /> <!-- Adjust the margin as per your preference -->

            <ImageView
                android:layout_width="@dimen/_20dp"
                android:layout_height="@dimen/_20dp"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/_15dp"
                android:src="@drawable/ic_email"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/passwordRelativeLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_30dp"
            android:layout_below="@+id/emailRelativeLayout">

            <EditText
                android:id="@+id/editTextPassword"
                android:layout_height="@dimen/_60dp"
                android:layout_width="@dimen/_390dp"
                android:paddingLeft="@dimen/_30dp"
                android:inputType="textPassword"
                android:layout_marginLeft="@dimen/_10dp"
                android:hint="@string/password"/>

            <ImageView
                android:layout_width="@dimen/_20dp"
                android:layout_height="@dimen/_20dp"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/_15dp"
                android:src="@drawable/ic_password"
                />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/signUpRelatveLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/passwordRelativeLayout"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_50dp">

            <Button
                android:layout_width="150dp"
                android:id="@+id/btnSignIn"
                android:layout_height="@dimen/_60dp"
                android:layout_marginRight="@dimen/_40dp"
                android:backgroundTint="@color/light_blue"
                android:text="@string/sign_in"
                android:onClick="signUpClick"/>

            <Button
                android:layout_width="150dp"
                android:id="@+id/btnSignUp"
                android:layout_height="@dimen/_60dp"
                android:layout_toRightOf="@+id/btnSignIn"
                android:backgroundTint="@color/red"
                android:text="@string/sign_up"/>

        </RelativeLayout>

        <TextView
            android:id="@+id/txtView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/signUpRelatveLayout"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_40dp"
            android:text="@string/or_log_in_with"
            android:textColor="@color/light_grey"
            android:textSize="@dimen/_15sp"/>

        <RelativeLayout
            android:id="@+id/GoogleRelativeLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtView"
            android:layout_marginTop="50dp"
            android:layout_centerHorizontal="true">

            <Button
                android:id="@+id/btnGoogleLogin"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:text="@string/log_in_with_google"
                android:textColor="@color/black"
                android:backgroundTint="@color/banana_color">
            </Button>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/GoogleRelativeLayout"
            android:layout_marginTop="200dp">

            <TextView
                android:id="@+id/txtCambodia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_30dp"
                android:text="@string/cambodia"
                android:textColor="#0b870f"/>

            <TextView
                android:id="@+id/txtE_library"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/e_library_ltd"
                android:layout_toRightOf="@+id/txtCambodia"
                android:layout_marginLeft="@dimen/_80dp"
                android:textColor="#0b870f"/>

            <TextView
                android:id="@+id/txtTosRan1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/txtE_library"
                android:text="@string/tos_ran"
                android:layout_marginLeft="@dimen/_70dp"
                android:textColor="#0b870f"/>

        </RelativeLayout>
    </RelativeLayout>
</ScrollView>
