<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:background="@color/dedede"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/BackToAuthorScreen"
            android:layout_width="@dimen/_40dp"
            android:layout_height="@dimen/_40dp"
            android:src="@drawable/baseline_keyboard_arrow_down_24"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            tools:context=".author_screen.AuthorInformationActivity">

            <ImageView
                android:id="@+id/authorImageView"
                android:layout_width="@dimen/_260dp"
                android:layout_height="@dimen/_200dp"
                android:layout_marginTop="@dimen/_30dp"
                android:scaleType="centerCrop"
                android:src="@drawable/elibra" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_30dp"
                android:background="@drawable/rounded_top_author"
                android:orientation="vertical"
                android:padding="@dimen/_30dp">

                <TextView
                    android:id="@+id/name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_20sp" />

                <TextView
                    android:id="@+id/gender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_20sp" />

                <TextView
                    android:id="@+id/idAuthor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_20sp" />

                <ScrollView
                    android:id="@+id/descriptionScrollView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/descriptionTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/short_description"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_20sp" />
                </ScrollView>

                <TextView
                    android:id="@+id/showMoreTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/show_more"
                    android:textColor="@color/_2561ba"
                    android:textSize="@dimen/_20sp"/>

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:layout_marginLeft="@dimen/_15dp"
            android:layout_marginTop="@dimen/_20dp"
            android:layout_marginBottom="@dimen/_10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/author_s_book"
            android:textSize="@dimen/_30dp"
            android:textColor="@color/black"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/AuthorBookDisplay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_30dp"/>

    </LinearLayout>
</androidx.core.widget.NestedScrollView>
