<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".search_screen.SearchFragment"
    android:orientation="vertical">


    <!-- Include your toolbar layout -->

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/includeToolbar"
            layout="@layout/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:gravity="center"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="@dimen/_160dp"
                android:layout_height="@dimen/_160dp"
                android:src="@drawable/avarta1"/>

            <TextView
                android:gravity="center"
                android:id="@+id/textViewUsername"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="@dimen/_18sp"
                android:textStyle="bold"
                android:padding="@dimen/_16dp"
                android:textColor="@android:color/black"
                android:text="@string/welcome" />

            <LinearLayout
                android:layout_marginTop="@dimen/_50dp"
                android:padding="@dimen/_10dp"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal"
                android:layout_width="@dimen/_400dp"
                android:layout_height="@dimen/_80dp">

                <Button
                    android:layout_marginLeft="@dimen/_20dp"
                    android:layout_marginRight="@dimen/_20dp"
                    android:layout_marginTop="@dimen/_100dp"
                    android:layout_gravity="center_horizontal"
                    android:id="@+id/btnLogout"
                    android:layout_width="@dimen/_160dp"
                    android:layout_height="@dimen/_60dp"
                    android:text="@string/logout_text"
                    android:textSize="@dimen/_18sp"
                    android:backgroundTint="@color/red"
                    />

                <Button
                    android:layout_marginTop="@dimen/_100dp"
                    android:layout_gravity="center_horizontal"
                    android:id="@+id/btnYourbook"
                    android:layout_width="@dimen/_160dp"
                    android:layout_height="@dimen/_60dp"
                    android:text="@string/books"
                    android:textSize="@dimen/_18sp"
                    android:backgroundTint="@color/light_blue"/>

            </LinearLayout>
        </LinearLayout>

    </LinearLayout>


</FrameLayout>